add ping service and request object
